# search_dashboard

./: .gitignore  pyproject.toml
src/dashboard/: app.py  app.tcss  load.py
src/data/: documents.json
