[tool.poetry]
name = "search-dashboard"
version = "0.1.0"
description = ""
authors = ["frabatx <francesco92battista@gmail.com>"]
readme = "README.md"
packages = [{include = "search_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
