[tool.poetry]
name = "search_dashboard"
version = "0.1.0"
description = "A terminal-based dashboard using Textual"
authors = ["Francesco Battista <francesco92battista@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "textual_dashboard", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.51.0"  # versione aggiornata al 2025

[tool.poetry.scripts]
textual-dashboard = "textual_dashboard.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
